23-10-2014 6.0.32
- Nexus sends no search folder. We default to inbox search now.
- Sieve rules parser updated
- Address Book & Custom Fields: fixed advanced searching Treeselect custom fields in Address Book.
- The tasks shown in the calendar will use the start time of the task
- permissions of key.txt invalid after fresh install
- Added full text search option to quick search
- Billing: Fixed menu item New > Invoice/Quote.
- Projects2: Template Events of type "job", "task" and "project".
- Brought back amavis anti spam and anti virus solution for mailserver.

20-10-2014 6.0.31
- Fixed quota calculcation for mailserver
- Fix for self referencing constant
- Projects2 : Return of the Action (a.k.a. Task Template, a.k.a. Template Event) of type Project.
- Fix for Excel HEAD request "Microsoft Office Existence Discovery": respond with 501 Not Implemented.
- Improved ProjectsV2 tasks grid load and save speed when there are many tasks
- Billing: Added due date for orders. Also added 2 template variables that can be used in the templates: {due_date} {due_days}
- Renamed Mwst to Ust. in German language file.
- Install bug in servermanager due to namespaces
- Remove quotes from SINCE and BEFORE queries to IMAP server as in RFC1730
- Company does not have to be in the same address book when creating user from contact. (company will move to selected address book instead)
- System test: fixed checking of max upload size
- Calendar: Name the exception event if calendar import is from Outlook.
- Calendar & Email: Fixed bug for creating emails from calendar events.
- Z-Push 2.1: Fixed timezone bug in iPhone task sync.
- Tickets: Fixed report: count also tickets in status Open.
- Calendar: Fixed calendar name positioning in month view Print.

08-10-2014 6.0.30
- save attachment bug
- Calendar month print will now show events between before 08:00 and after 17:59
- Fixed summer- / wintertime issue in the calendar's month print