@@ -37,12 +37,28 @@ class Message extends \Swift_Message{
 	
 	private $_loadedBody;
 	
+	/**
+	 * The path in where the temporary attachments are stored
+	 * 
+	 * @var boolean/string 
+	 */
+	private $_tmpDir = false;
+	
 	public function __construct($subject = null, $body = null, $contentType = null, $charset = null) {
 		parent::__construct($subject, $body, $contentType, $charset);
 		
 		$headers = $this->getHeaders();
 
 		$headers->addTextHeader("User-Agent", GO::config()->product_name);
+	}
+	
+	/**
+	 * Get the tmp directory in where the temporary attachments are stored
+	 * 
+	 * @return string The path to the tmp directory
+	 */
+	public function getTmpDir(){
+		return $this->_tmpDir;
 	}
 	
 	/**
@@ -260,10 +276,10 @@ class Message extends \Swift_Message{
 				{
 					//attachment
 
-					$dir=\GO::config()->tmpdir.'attachments/';
+					$this->_tmpDir =\GO::config()->tmpdir.'attachments/'.  uniqid().'/';
 
-					if(!is_dir($dir))
-						mkdir($dir, 0755, true);
+					if(!is_dir($this->_tmpDir ))
+						mkdir($this->_tmpDir , 0755, true);
 
 					//unset($part->body);
 					//var_dump($part);
@@ -283,7 +299,7 @@ class Message extends \Swift_Message{
 						$filename=uniqid(time());
 					}
 
-					$tmp_file = $dir.$filename;
+					$tmp_file = $this->_tmpDir .$filename;
 					file_put_contents($tmp_file, $part->body);
 
 					$mime_type = $part->ctype_primary.'/'.$part->ctype_secondary;
